--- a/Project/questionnaire.html
+++ b/Project/questionnaire.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<link href="CSS/style.css" rel="stylesheet" />
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
 			rel="stylesheet"
@@ -14,7 +15,93 @@
 		></script>
 	</head>
 	<body>
-		<h1>Questionnaire</h1>
-		<p>h</p>
+		<h1 class="text-center">Questionnaire</h1>
+		<h4>Question 1: Dropdown</h4>
+		<div class="form-group">
+			<label for="sel1">Select list:</label>
+			<select class="form-control" id="sel1">
+				<option>1</option>
+				<option>2</option>
+				<option>3</option>
+				<option>4</option>
+			</select>
+		</div>
+		<h4>Question 2: Sample Question</h4>
+		<div class="mb-3">
+			<label for="exampleFormControlTextarea1" class="form-label"
+				>Answer:</label
+			>
+			<textarea
+				class="form-control"
+				id="exampleFormControlTextarea1"
+				rows="3"
+			></textarea>
+		</div>
+		<h4>Question 3: Multiple Choice</h4>
+		<div class="form-check">
+			<input
+				class="form-check-input"
+				type="radio"
+				name="flexRadioDefault"
+				id="flexRadioDefault1"
+				wtx-context="1FC9E9F0-0F75-43A0-9C25-D100F6BE9E07"
+			/>
+			<label class="form-check-label" for="flexRadioDefault1">
+				Default radio
+			</label>
+		</div>
+		<div class="form-check">
+			<input
+				class="form-check-input"
+				type="radio"
+				name="flexRadioDefault"
+				id="flexRadioDefault2"
+				wtx-context="1CAF244D-B792-4FB0-B525-A6639BD4BD62"
+			/>
+			<label class="form-check-label" for="flexRadioDefault2">
+				Default radio
+			</label>
+		</div>
+		<div class="form-check">
+			<input
+				class="form-check-input"
+				type="radio"
+				name="flexRadioDefault"
+				id="flexRadioDefault2"
+				wtx-context="1CAF244D-B792-4FB0-B525-A6639BD4BD62"
+			/>
+			<label class="form-check-label" for="flexRadioDefault2">
+				Default radio
+			</label>
+		</div>
+		<div class="form-check">
+			<input
+				class="form-check-input"
+				type="radio"
+				name="flexRadioDefault"
+				id="flexRadioDefault2"
+				wtx-context="1CAF244D-B792-4FB0-B525-A6639BD4BD62"
+			/>
+			<label class="form-check-label" for="flexRadioDefault2">
+				Default radio
+			</label>
+		</div>
+		<h4>Question 4: 1 to 5</h4>
+		<h5>1 = strongly Agree 5 = strongly disagree</h5>
+		<div class="btn-group" role="group" aria-label="1 to 5">
+			<input class="btn btn-primary" type="button" value="1" />
+			<input class="btn btn-primary" type="button" value="2" />
+			<input class="btn btn-primary" type="button" value="3" />
+			<input class="btn btn-primary" type="button" value="4" />
+			<input class="btn btn-primary" type="button" value="5" />
+		</div>
+		<h4 id="submit-button-text">Submit Button Below</h4>
+		<div
+			class="btn-group-vertical"
+			role="group"
+			aria-label="Vertical button group"
+		>
+			<button type="submit" class="btn btn-primary">Submit</button>
+		</div>
 	</body>
 </html>
