--- a/Project/questionnaire.html
+++ b/Project/questionnaire.html
@@ -17,15 +17,12 @@
 	<body>
 		<h1 class="text-center">Questionnaire</h1>
 		<h4>Question 1: Dropdown</h4>
-		<div class="form-group">
-			<label for="sel1">Select list:</label>
-			<select class="form-control" id="sel1">
-				<option>1</option>
-				<option>2</option>
-				<option>3</option>
-				<option>4</option>
-			</select>
-		</div>
+		<select class="form-select" aria-label="Default select example">
+			<option selected>Open this select menu</option>
+			<option value="1">One</option>
+			<option value="2">Two</option>
+			<option value="3">Three</option>
+		</select>
 		<h4>Question 2: Sample Question</h4>
 		<div class="mb-3">
 			<label for="exampleFormControlTextarea1" class="form-label"
