--- a/Project/index.html
+++ b/Project/index.html
@@ -10,11 +10,11 @@
 		<script
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
 			integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-			crossorigin="anonymous"
+			crossorigin="anonymous "
 		></script>
 	</head>
 	<body>
-		<h1>Welcome to the Museum</h1>
+		<h1>Welcome to the Museum .</h1>
 		<p>Description.</p>
 	</body>
 </html>
