--- a/Project/index.html
+++ b/Project/index.html
@@ -13,43 +13,43 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <link rel="stylesheet" href="custom.css">
+    <script src="jscript.js"></script>
     <title>Homepage</title>
   </head>
   <body>
 
-    <div class="hugeimage">
-      <div class="overlay">
-        <h1 class="maintitle"> Welcome to the Museum </h1>
+    <div class="overlay">
+      <h1 class="maintitle"> Welcome to the Museum </h1>
 
 
         <div class = searchbox>
-          <form>
-            <input type="text" name="" placeholder="Search..">
-            <button type="submit"><i class="fa fa-search"
-              arial-hidden="true"></i></button>
-          </form>
-        </div>
-
-
-
-        <div class="container">
-            <!-- Content here -->
-          Brief Museum description..
-        </div>
-
-
-        <!-- Icons -->
-        <div class="iconstyle">
-          <a style="text-decoration:none" href="#" class="fa fa-instagram"></a>
-          <a style="text-decoration:none" href="#" class="fa fa-facebook"></a>
-          <a style="text-decoration:none" href="#" class="fa fa-telegram"></a>
-          <a style="text-decoration:none" href="#" class="fa fa-twitter"></a>
-        </div>
-
+        <form>
+          <input type="text" name="" placeholder="Search..">
+          <button type="submit"><i class="fa fa-search"
+          arial-hidden="true"></i></button>
+        </form>
       </div>
 
-      
+
+
+      <div class="container">
+        <!-- Content here -->
+        Brief Museum description..
+      </div>
+
+
+      <!-- Icons -->
+      <div class="iconstyle">
+        <a style="text-decoration:none" href="#" class="fa fa-instagram"></a>
+        <a style="text-decoration:none" href="#" class="fa fa-facebook"></a>
+        <a style="text-decoration:none" href="#" class="fa fa-telegram"></a>
+        <a style="text-decoration:none" href="#" class="fa fa-twitter"></a>
+      </div>
+
     </div>
+
+      
+
 
 
     <!-- Optional JavaScript -->
