--- a/Project/questionnaire.html
+++ b/Project/questionnaire.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<link href="CSS/style.css" rel="stylesheet" />
-		<script src="jscript.js"></script>
+		<script src="JS/jscript.js"></script>
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
 			rel="stylesheet"
