--- a/Project/events.html
+++ b/Project/events.html
@@ -7,7 +7,7 @@
 			integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
 			crossorigin="anonymous"
 		/>
-		<script src="jscript.js"></script>
+		<script src="JS/jscript.js"></script>
 		<script>
 			document.addEventListener("DOMContentLoaded", function () {
 				getEvents();
