--- a/Project/index.html
+++ b/Project/index.html
@@ -12,7 +12,7 @@
     <!-- Add icon library -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <link rel="stylesheet" href="custom.css">
+    <link rel="stylesheet" href="style.css">
     <script src="jscript.js"></script>
     <title>Homepage</title>
   </head>
