Improved styling of the page

--- a/Project/questionnaire.html
+++ b/Project/questionnaire.html
@@ -17,7 +17,7 @@
 	</head>
 	<body>
 		<section>
-			<h1 class="text-center">Questionnaire</h1>
+			<h1 id="questionnaire-title" class="text-center">Questionnaire</h1>
 			<h4 class="question">Question 1: Dropdown</h4>
 			<select class="form-select" aria-label="Default select example">
 				<option selected>Open this select menu</option>
@@ -27,7 +27,7 @@
 			</select>
 			<h4 class="question">Question 2: Sample Question</h4>
 			<div class="mb-3">
-				<label for="exampleFormControlTextarea1" class="form-label"
+				<label for="exampleFormControlTextarea1" class="form-label LabelQ"
 					>Answer:</label
 				>
 				<textarea
@@ -45,7 +45,7 @@
 					id="flexRadioDefault1"
 					wtx-context="1FC9E9F0-0F75-43A0-9C25-D100F6BE9E07"
 				/>
-				<label class="form-check-label" for="flexRadioDefault1">
+				<label class="form-check-label LabelQ" for="flexRadioDefault1">
 					Default radio
 				</label>
 			</div>
@@ -57,7 +57,7 @@
 					id="flexRadioDefault2"
 					wtx-context="1CAF244D-B792-4FB0-B525-A6639BD4BD62"
 				/>
-				<label class="form-check-label" for="flexRadioDefault2">
+				<label class="form-check-label LabelQ" for="flexRadioDefault2">
 					Default radio
 				</label>
 			</div>
@@ -69,7 +69,7 @@
 					id="flexRadioDefault2"
 					wtx-context="1CAF244D-B792-4FB0-B525-A6639BD4BD62"
 				/>
-				<label class="form-check-label" for="flexRadioDefault2">
+				<label class="form-check-label LabelQ" for="flexRadioDefault2">
 					Default radio
 				</label>
 			</div>
@@ -81,12 +81,12 @@
 					id="flexRadioDefault2"
 					wtx-context="1CAF244D-B792-4FB0-B525-A6639BD4BD62"
 				/>
-				<label class="form-check-label" for="flexRadioDefault2">
+				<label class="form-check-label LabelQ" for="flexRadioDefault2">
 					Default radio
 				</label>
 			</div>
 			<h4 class="question">Question 4: 1 to 5</h4>
-			<h5>1 = strongly Agree 5 = strongly disagree</h5>
+			<h5 class="question">1 = strongly Agree 5 = strongly disagree</h5>
 			<div class="btn-group" role="group" aria-label="1 to 5">
 				<input class="btn btn-primary" type="button" value="1" />
 				<input class="btn btn-primary" type="button" value="2" />
