--- a/Project/questionnaire.html
+++ b/Project/questionnaire.html
@@ -27,7 +27,7 @@
 			</select>
 			<h4 class="question">Question 2: Sample Question</h4>
 			<div class="mb-3">
-				<label for="exampleFormControlTextarea1" class="form-label LabelQ"
+				<label for="exampleFormControlTextarea1" class="form-label labelQ"
 					>Answer:</label
 				>
 				<textarea
@@ -45,7 +45,7 @@
 					id="flexRadioDefault1"
 					wtx-context="1FC9E9F0-0F75-43A0-9C25-D100F6BE9E07"
 				/>
-				<label class="form-check-label LabelQ" for="flexRadioDefault1">
+				<label class="form-check-label labelQ" for="flexRadioDefault1">
 					Default radio
 				</label>
 			</div>
@@ -57,7 +57,7 @@
 					id="flexRadioDefault2"
 					wtx-context="1CAF244D-B792-4FB0-B525-A6639BD4BD62"
 				/>
-				<label class="form-check-label LabelQ" for="flexRadioDefault2">
+				<label class="form-check-label labelQ" for="flexRadioDefault2">
 					Default radio
 				</label>
 			</div>
@@ -69,7 +69,7 @@
 					id="flexRadioDefault2"
 					wtx-context="1CAF244D-B792-4FB0-B525-A6639BD4BD62"
 				/>
-				<label class="form-check-label LabelQ" for="flexRadioDefault2">
+				<label class="form-check-label labelQ" for="flexRadioDefault2">
 					Default radio
 				</label>
 			</div>
@@ -81,7 +81,7 @@
 					id="flexRadioDefault2"
 					wtx-context="1CAF244D-B792-4FB0-B525-A6639BD4BD62"
 				/>
-				<label class="form-check-label LabelQ" for="flexRadioDefault2">
+				<label class="form-check-label labelQ" for="flexRadioDefault2">
 					Default radio
 				</label>
 			</div>
