--- a/Project/questionnaire.html
+++ b/Project/questionnaire.html
@@ -95,7 +95,7 @@
 				<input class="btn btn-primary" type="button" value="5" />
 			</div>
 			<h4 id="submit-button-text">Submit Button Below</h4>
-			<button type="submit" class="btn btn-primary">Submit</button>
+			<button type="submit" class="btn btn-primary btn-submit">Submit</button>
 		</section>
 	</body>
 </html>
