--- a/Project/questionnaire.html
+++ b/Project/questionnaire.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link href="CSS/style.css" rel="stylesheet" />
+		<link href="CSS/questionnaire.css" rel="stylesheet" />
 		<script src="JS/jscript.js"></script>
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
@@ -27,7 +27,7 @@
 			</select>
 			<h4 class="question">Question 2: Sample Question</h4>
 			<div class="mb-3">
-				<label for="exampleFormControlTextarea1" class="form-label"
+				<label for="exampleFormControlTextarea1" class="form-label labelQ"
 					>Answer:</label
 				>
 				<textarea
@@ -45,7 +45,7 @@
 					id="flexRadioDefault1"
 					wtx-context="1FC9E9F0-0F75-43A0-9C25-D100F6BE9E07"
 				/>
-				<label class="form-check-label" for="flexRadioDefault1">
+				<label class="form-check-label labelQ" for="flexRadioDefault1">
 					Default radio
 				</label>
 			</div>
@@ -57,7 +57,7 @@
 					id="flexRadioDefault2"
 					wtx-context="1CAF244D-B792-4FB0-B525-A6639BD4BD62"
 				/>
-				<label class="form-check-label" for="flexRadioDefault2">
+				<label class="form-check-label labelQ" for="flexRadioDefault2">
 					Default radio
 				</label>
 			</div>
@@ -69,7 +69,7 @@
 					id="flexRadioDefault2"
 					wtx-context="1CAF244D-B792-4FB0-B525-A6639BD4BD62"
 				/>
-				<label class="form-check-label" for="flexRadioDefault2">
+				<label class="form-check-label labelQ" for="flexRadioDefault2">
 					Default radio
 				</label>
 			</div>
@@ -81,12 +81,12 @@
 					id="flexRadioDefault2"
 					wtx-context="1CAF244D-B792-4FB0-B525-A6639BD4BD62"
 				/>
-				<label class="form-check-label" for="flexRadioDefault2">
+				<label class="form-check-label labelQ" for="flexRadioDefault2">
 					Default radio
 				</label>
 			</div>
 			<h4 class="question">Question 4: 1 to 5</h4>
-			<h5>1 = strongly Agree 5 = strongly disagree</h5>
+			<h5 class="ques" tion>1 = strongly Agree 5 = strongly disagree</h5>
 			<div class="btn-group" role="group" aria-label="1 to 5">
 				<input class="btn btn-primary" type="button" value="1" />
 				<input class="btn btn-primary" type="button" value="2" />
