fixed JS and CSS for index

--- a/Project/index.html
+++ b/Project/index.html
@@ -21,8 +21,8 @@
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
 		/>
 
-		<link rel="stylesheet" href="style.css" />
-		<script src="jscript.js"></script>
+		<link rel="stylesheet" href="CSS/style.css" />
+		<script src="JS/jscript.js"></script>
 		<title>Homepage</title>
 	</head>
 	<body>
