--- a/Project/questionnaire.html
+++ b/Project/questionnaire.html
@@ -16,7 +16,7 @@
 		></script>
 	</head>
 	<body>
-		<section>
+		<section id="question-page">
 			<h1 class="text-center">Questionnaire</h1>
 			<h4 class="question">Question 1: Dropdown</h4>
 			<select class="form-select" aria-label="Default select example">
