--- a/Project/questionnaire.html
+++ b/Project/questionnaire.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link href="CSS/questionnaire.css" rel="stylesheet" />
+		<link href="CSS/style.css" rel="stylesheet" />
 		<script src="JS/jscript.js"></script>
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
