--- a/Project/quiz.html
+++ b/Project/quiz.html
@@ -9,6 +9,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="{% 'CSS/style.css' %}" rel="stylesheet" type="text/css">
+    <script src="JS/jscript.js"></script>
     </head>
 	<body>
         <style>
@@ -23,7 +24,7 @@
                 width: 1000px;
                 height: 79px;
                 /* left: 347px; */
-                top: 159px;
+                top: 60px;
                 font-style: normal;
                 font-weight: 700;
                 font-size: 65px;
