--- a/Project/timeline.html
+++ b/Project/timeline.html
@@ -10,14 +10,10 @@
 			integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
 			crossorigin="anonymous"
 		/>
-		<script
-			src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-			integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-			crossorigin="anonymous"
-		></script>
 	</head>
   <body>
-    <h1>Interactive Timeline System</h1>
+
+    <h1 class="maintitle">Interactive Timeline System</h1>
     <div class="d-flex justify-content-center">
       <div class="container">
         Description
