--- a/Project/timeline.html
+++ b/Project/timeline.html
@@ -13,12 +13,11 @@
 	</head>
   <body>
 
-    <h1 class="maintitle">Interactive Timeline System</h1>
-    <div class="d-flex justify-content-center">
-      <div class="container">
-        Description
-      </div>
+    <div class="overlay">
+      <h1 class="maintitle">Interactive Timeline System</h1>
+        <div class="container">
+          Description
+        </div>
     </div>
-
   </body>
 </html>
