Adding in example artifact and the elements

--- a/Project/timeline.html
+++ b/Project/timeline.html
@@ -15,9 +15,26 @@
 
     <div class="overlay">
       <h1 class="maintitle">Interactive Timeline System</h1>
+
+
+      <div class="circle p-6">
+        <img src="url('images/Example_Artifact.png')">
+      </div>
+
+
+        <!-- Description of artifact -->
         <div class="container">
-          Description
+          Artifact Description
         </div>
+
+        <!-- Icons -->
+			<div class="iconstyle">
+				<a style="text-decoration: none" href="#" class="fa fa-instagram"></a>
+				<a style="text-decoration: none" href="#" class="fa fa-facebook"></a>
+				<a style="text-decoration: none" href="#" class="fa fa-telegram"></a>
+				<a style="text-decoration: none" href="#" class="fa fa-twitter"></a>
+			</div>
+
     </div>
   </body>
 </html>
