--- a/Project/timeline.html
+++ b/Project/timeline.html
@@ -18,7 +18,7 @@
 
 
       <div class="circle p-6">
-        <img src="images/Example_Artifact.png">
+        <img src="images/ExampleArtifact.png">
       </div>
 
 
