--- a/Project/timeline.html
+++ b/Project/timeline.html
@@ -18,7 +18,7 @@
 
 
       <div class="circle p-6">
-        <img src="images/ExampleArtifact.png">
+        <img src="url('images/ExampleArtifact.png')">
       </div>
 
 
