--- a/Project/timeline.html
+++ b/Project/timeline.html
@@ -18,7 +18,7 @@
 
 
       <div class="circle p-6">
-        <img src="url('images/ExampleArtifact.png')">
+        <img src="images/ExampleArtifact.png" class="w-h-100" alt="picture of artifact">
       </div>
 
 
