--- a/Project/timeline.html
+++ b/Project/timeline.html
@@ -17,7 +17,7 @@
       <h1 class="maintitle">Interactive Timeline System</h1>
 
 
-      <div class="circle p-6">
+      <div class="rounded-circle p-6">
         <img src="images/ExampleArtifact.png" class="w-h-100" alt="picture of artifact">
       </div>
 
