--- a/Project/timeline.html
+++ b/Project/timeline.html
@@ -17,9 +17,7 @@
       <h1 class="maintitle">Interactive Timeline System</h1>
 
 
-      <div class="rounded-circle p-6">
-        <img src="images/ExampleArtifact.png" class="w-h-100" alt="picture of artifact">
-      </div>
+      <img src="images/ExampleArtifact.png" class="rounded-circle p-6" alt="picture of artifact">
 
 
         <!-- Description of artifact -->
