--- a/Project/timeline.html
+++ b/Project/timeline.html
@@ -3,13 +3,18 @@
 <html lang="en">
   <head>
 		<link href="CSS/style.css" rel="stylesheet" />
+    <link href="CSS/magicscroll.css" rel="stylesheet" />
 		<script src="JS/jscript.js"></script>
+    <script src="JS/magicscroll.js"></script>
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
 			rel="stylesheet"
 			integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
 			crossorigin="anonymous"
 		/>
+    <!-- removing water mark -->
+    
+
 	</head>
   <body>
 
@@ -17,8 +22,14 @@
       <h1 class="maintitle">Interactive Timeline System</h1>
 
 
-      <img src="images/ExampleArtifact.png" class="rounded-circle p-6" alt="picture of artifact">
-
+        <div class="MagicScroll" data-options="mode: cover-flow; height: 275px;">
+          <a href="events.html"><img src="images/ExampleArtifact.png"></a>
+          <img src="images/ExampleArtifact.png">
+          <img src="images/ExampleArtifact.png">
+          <img src="images/ExampleArtifact.png">
+          <img src="images/ExampleArtifact.png">
+          <img src="images/ExampleArtifact.png">
+        </div>
 
         <!-- Description of artifact -->
         <div class="container">
@@ -36,3 +47,14 @@
     </div>
   </body>
 </html>
+
+<script>
+  window.addEventListener("load", function() {
+    var waterMark = document.querySelectorAll('a');
+    console.log(waterMark);
+    for (var i = 0; i<waterMark.length; i++){
+      console.log(waterMark[i]);
+    }
+  waterMark.setAttribute("style", "visibility: hidden");
+  });
+</script>
