--- a/Project/artifact.html
+++ b/Project/artifact.html
@@ -87,7 +87,7 @@ width: 100px;
             </div>
 
             <div class="col-md-6 p-2" id="description-1">
-                <p>find artifact</p>
+                <p>find artifacts</p>
             </div>
 
         </div>
