made more changes

--- a/Project/eventdetails.html
+++ b/Project/eventdetails.html
@@ -82,3 +82,8 @@
         <div class="col-sm-5 col-sm-push-3 btn-register-col">
           <a href="#" class="btn btn-register">Register Now</a>
         </div>
+      </div>
+  </div>
+  </body>
+  </html>
+    
