--- a/Project/eventdetails.html
+++ b/Project/eventdetails.html
@@ -5,18 +5,24 @@
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	  <script src="JS/jscript.js"></script>
     <style>
+      .page-header{
+        font-family: "Playfair Display", serif;
+
+      }
       .event-details {
         margin-top: 20px;
         margin-bottom: 50px;
        
       }
       .event-image {
+        margin-top: 24px;
         margin-bottom: 20px;
         display: block;
-        margin-left: left;
+        margin-left: auto;
         margin-right: auto;
         width: 10cm;
         height: 10cm;
+        transition:0.3s;
       }
 
       .btn-register {
@@ -28,61 +34,79 @@
         display: block;
       }
 
-      .btn-register:hover {
-        background-color: #9cb5d0;
-      }
-
       .event-description {
         margin-top: 30px;
+        margin-left: auto;
+        margin-right: auto;
+        background-color: rgba(246, 234, 212,0.5);
       }
 
       .event-description-header {
         font-weight: bold;
         margin-top: 0;
+        font-style: oblique;
       }
 
       .event-date-location {
-        margin-top: 20px;
+        margin-top: 2px;
+        background-color: rgba(246, 234, 212,0.5);
+        margin-left: auto;
+        margin-right: auto;
       }
 
       .event-date-location-header {
         font-weight: bold;
         margin-top: 0;
+        font-style: oblique;
       }
-      .btn-register-col {
-        display: flex;
-        justify-content: left;
-        align-items: center;
+     .btn-register-col{
+        margin-left: 7.8cm;
+     }
+     .btn-register:hover {
+        background-color: #9cb5d0;
       }
-
+      .event-image:hover{
+        transform:scale(1.1);
+        cursor: pointer;
+      }
+      
     </style>
   </head>
+
   <body>
     <div class="container">
       <div class="page-header header1">
         <h1>Event Name</h1>
       </div>
+
       <div class="row">
         <div class="col-sm-6">
-          <img class="event-image" src="eventimage.jpg" alt="Event Image">
+          <a href="images/museum.png">
+          <img class="event-image" src="images/museum.png" alt="Event Image">
+          </a>
+          <div class="col-sm-4  btn-register-col">
+            <a href="#" class="btn btn-register">Register Now</a>
+          </div>
         </div>
-        <div class="col-sm-6 event-details">
+
+        <div class="col-sm-4 event-details">
           <div class="event-date-location">
             <h3 class="event-date-location-header">Date and Location:</h3>
             <p>Date: <span>April 24, 2023</span></p>
             <p>Location: <span>Wax Museum, Niagara</span></p>
           </div>
+
           <div class="event-description">
-            <h3 class="event-description-header">Event Description:</h3>
-            <p></p>
+            <h3 class="event-description-header">Dinosaurs:</h3>
+            <p>Step back in time and explore the prehistoric world of dinosaurs at our upcoming museum event! 
+              Experience the thrill of encountering life-sized replicas of the world's most famous dinosaurs, 
+              including the towering T-Rex, the speedy Velociraptor, and the gentle Brachiosaurus. 
+              Learn about their habitats, behaviors, and extinction through interactive exhibits,
+              captivating displays, and informative presentations. Don't miss your chance to embark on a 
+              journey through the Mesozoic Era and discover the secrets of the ancient giants that once roamed the earth!</p>
           </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-5 col-sm-push-5 btn-register-col">
-          <a href="#" class="btn btn-register">Register Now</a>
-        </div>
-      </div>
+        </div>  
+
   </div>
   </body>
   </html>
