--- a/Project/eventdetails.html
+++ b/Project/eventdetails.html
@@ -39,12 +39,14 @@
         margin-left: auto;
         margin-right: auto;
         background-color: rgba(246, 234, 212,0.5);
+        text-align: justify;
       }
 
       .event-description-header {
         font-weight: bold;
         margin-top: 0;
         font-style: oblique;
+        text-align: center;
       }
 
       .event-date-location {
@@ -52,12 +54,14 @@
         background-color: rgba(246, 234, 212,0.5);
         margin-left: auto;
         margin-right: auto;
+        text-align: justify;
       }
 
       .event-date-location-header {
         font-weight: bold;
-        margin-top: 0;
+        margin-top: auto;
         font-style: oblique;
+        text-align: center;
       }
      .btn-register-col{
         margin-left: 7.8cm;
