--- a/Project/eventdetails.html
+++ b/Project/eventdetails.html
@@ -5,16 +5,19 @@
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	  <script src="JS/jscript.js"></script>
     <style>
-      .page-header{
+      .page-header
+      {
         font-family: "Playfair Display", serif;
 
       }
-      .event-details {
+      .event-details 
+      {
         margin-top: 20px;
         margin-bottom: 50px;
        
       }
-      .event-image {
+      .event-image 
+      {
         margin-top: 24px;
         margin-bottom: 20px;
         display: block;
@@ -25,7 +28,8 @@
         transition:0.3s;
       }
 
-      .btn-register {
+      .btn-register 
+      {
         background-color: #010911;
         color: #ffffff;
         border-radius: 0;
@@ -34,7 +38,8 @@
         display: block;
       }
 
-      .event-description {
+      .event-description 
+      {
         margin-top: 30px;
         margin-left: auto;
         margin-right: auto;
@@ -42,14 +47,16 @@
         text-align: justify;
       }
 
-      .event-description-header {
+      .event-description-header 
+      {
         font-weight: bold;
         margin-top: 0;
         font-style: oblique;
         text-align: center;
       }
 
-      .event-date-location {
+      .event-date-location 
+      {
         margin-top: 2px;
         background-color: rgba(246, 234, 212,0.5);
         margin-left: auto;
@@ -57,19 +64,23 @@
         text-align: justify;
       }
 
-      .event-date-location-header {
+      .event-date-location-header 
+      {
         font-weight: bold;
         margin-top: auto;
         font-style: oblique;
         text-align: center;
       }
-     .btn-register-col{
+     .btn-register-col
+     {
         margin-left: 7.8cm;
      }
-     .btn-register:hover {
+     .btn-register:hover 
+     {
         background-color: #9cb5d0;
       }
-      .event-image:hover{
+      .event-image:hover
+      {
         transform:scale(1.1);
         cursor: pointer;
       }
