--- a/Project/eventdetails.html
+++ b/Project/eventdetails.html
@@ -8,6 +8,7 @@
       .page-header
       {
         font-family: "Playfair Display", serif;
+        transition: 0.3s;
 
       }
       .event-details 
@@ -43,7 +44,7 @@
         margin-top: 30px;
         margin-left: auto;
         margin-right: auto;
-        background-color: rgba(246, 234, 212,0.5);
+        background-color: rgba(249, 246, 240, 0.6);
         text-align: justify;
       }
 
@@ -58,7 +59,7 @@
       .event-date-location 
       {
         margin-top: 2px;
-        background-color: rgba(246, 234, 212,0.5);
+        background-color: rgba(249, 246, 240, 0.6);
         margin-left: auto;
         margin-right: auto;
         text-align: justify;
@@ -83,6 +84,12 @@
       {
         transform:scale(1.1);
         cursor: pointer;
+      }
+      .page-header:hover
+      {
+        transform: scale(1.1);
+        text-decoration:underline;
+        text-decoration-color: rgb(14, 13, 13);
       }
       
     </style>
