--- a/Project/eventdetails.html
+++ b/Project/eventdetails.html
@@ -119,7 +119,7 @@
           </div>
 
           <div class="event-description">
-            <h3 class="event-description-header">Dinosaurs:</h3>
+            <h3 class="event-description-header">Event Description:</h3>
             <p>Step back in time and explore the prehistoric world of dinosaurs at our upcoming museum event! 
               Experience the thrill of encountering life-sized replicas of the world's most famous dinosaurs, 
               including the towering T-Rex, the speedy Velociraptor, and the gentle Brachiosaurus. 
