made changes to my page

--- a/Project/artifact.html
+++ b/Project/artifact.html
@@ -37,6 +37,7 @@
     #description {
 
         background-color: white;
+        border-radius: 5px;
         opacity: 70%;
         margin-bottom: 2ch;
         /* margin-left: 2ch; */
@@ -47,6 +48,7 @@
     #description-1 {
         text-align: center;
         background-color: white;
+        border-radius: 5px;
         margin-bottom: 2ch;
 
         opacity: 70%;
@@ -69,7 +71,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-auto mx-auto mt-2">
-                <img src="https://via.placeholder.com/250x250" class="img-fluid" alt="Artifact Image">
+                <img src="images/ExampleArtifact.png" style="width:250px;height:250px;" class="img-fluid" alt="Artifact Image">
             </div>
         </div>
     </div>
@@ -107,7 +109,5 @@
 
         </div>
     </div>
-
 </body>
-
 </html>
