changes made to iimage

--- a/Project/eventdetails.html
+++ b/Project/eventdetails.html
@@ -103,8 +103,8 @@
 
       <div class="row">
         <div class="col-sm-6">
-          <a href="images/museum.png">
-          <img class="event-image" src="images/museum.png" alt="Event Image">
+          <a href="images/di.jpg">
+          <img class="event-image" src="images/di.jpg" alt="Event Image">
           </a>
           <div class="col-sm-4  btn-register-col">
             <a href="#" class="btn btn-register">Register Now</a>
