changed to artifact

--- a/Project/timeline.html
+++ b/Project/timeline.html
@@ -23,7 +23,7 @@
 
 
         <div class="MagicScroll" data-options="mode: cover-flow; height: 275px;">
-          <a href="events.html"><img src="images/ExampleArtifact.png"></a>
+          <a href="artifact.html"><img src="images/ExampleArtifact.png"></a>
           <img src="images/ExampleArtifact.png">
           <img src="images/ExampleArtifact.png">
           <img src="images/ExampleArtifact.png">
