--- a/Project/artifact.html
+++ b/Project/artifact.html
@@ -87,7 +87,7 @@
                     vel mi. Cras eget nulla vitae purus rutrum iaculis. Cras convallis posuere risus, quis sagittis
                     orci. Mauris eu sollicitudin ligula. Vivamus cursus, metus ac consequat bibendum, justo massa
                     aliquam ex, sed varius velit urna non tellus. Curabitur dapibus eros in auctor mollis. Aenean
-                    consequat vejnnjjjnenatis metus eget tempor. Sed eu justo vel tellus feugiat varius sit amet eget
+                    consequat metus eget tempor. Sed eu justo vel tellus feugiat varius sit amet eget
                     nulla. Mauris lobortis, dolor ac ultrices vestibulum, sapien justo dignissim sem, in
                     vhelloenenatis quam nunc in libero. Sed nec elementum turpis, at fringilla eros. Ut vestibulum,
                     massa sed iaculis rhoncus, felis tortor laoreet enim, id accumsan nulla velit ut tellus.
