--- a/Project/questionnaire.html
+++ b/Project/questionnaire.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<link href="CSS/style.css" rel="stylesheet" />
+		<style></style>
 		<script src="JS/jscript.js"></script>
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
@@ -17,9 +18,13 @@
 	</head>
 	<body>
 		<section id="question-page">
-			<h1 class="text-center">Questionnaire</h1>
+			<h1 id="questionnaire-title" class="text-center">Questionnaire</h1>
 			<h4 class="question">Question 1: Dropdown</h4>
-			<select class="form-select" aria-label="Default select example">
+			<select
+				class="form-select"
+				id="Select1"
+				aria-label="Default select example"
+			>
 				<option selected>Open this select menu</option>
 				<option value="1">One</option>
 				<option value="2">Two</option>
