--- a/Project/quiz.html
+++ b/Project/quiz.html
@@ -166,5 +166,11 @@
                 <label class="btn" for="check4">Option 4</label>
             </div>
         </div>
+
+        <div class="row justify-content-md-center">
+            <div id="btnSubmit" class=" text-center option col-md-5">
+                <button type="button" class="btn btn-success">Submit</button>
+            </div>
+        </div>
 	</body>
 </html>
