--- a/Project/artifact.html
+++ b/Project/artifact.html
@@ -37,20 +37,17 @@
 			/* padding-left: 12%; */
 		}
 
-    #description {
+		#description {
+			background-color: white;
+			opacity: 70%;
+			margin-bottom: 2ch;
+			/* margin-left: 2ch; */
+		}
 
-        background-color: white;
-        opacity: 70%;
-        margin-bottom: 2ch;
-        /* margin-left: 2ch; */
-
-
-    }
-
-    #description-1 {
-        text-align: center;
-        background-color: white;
-        margin-bottom: 2ch;
+		#description-1 {
+			text-align: center;
+			background-color: white;
+			margin-bottom: 2ch;
 
 			opacity: 70%;
 			margin-left: 1ch;
@@ -66,34 +63,42 @@
 			</div>
 		</div>
 
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-auto mx-auto mt-2">
-                <img src="https://via.placeholder.com/250x250" class="img-fluid" alt="Artifact Image">
-            </div>
-        </div>
-    </div>
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col-md-auto mx-auto mt-2">
+					<img
+						src="https://via.placeholder.com/250x250"
+						class="img-fluid"
+						alt="Artifact Image"
+					/>
+				</div>
+			</div>
+		</div>
 
-
-    <div class="container-fluid description-box">
-        <div class="row w-75 mx-auto">
-            <div class="col-sm-12 " id="description">
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. In interdum dui mollis sem scelerisque,
-                    vestibulum tincidunt libero bibendum. Nunc velit turpis, imperdiet sed fringilla in,
-                    consecteturnn in sem.nnnnnnnvrvr Cras nunc risus, scelerisque bibendum sollicitudin convallis, scelerisque
-                    vel mi. Cras eget nulla vitae purus rutrum iaculis. Cras convallis posuere risus, quis sagittis
-                    orci. Mauris eu sollicitudin ligula. Vivamus cursus, metus ac consequat bibendum, justo massa
-                    aliquam ex, sed varius velit urna non tellus. Curabitur dapibus eros in auctor mollis. Aenean
-                    consequat vejnnjjjnenatis metus eget tempor. Sed eu justo vel tellus feugiat varius sit amet eget
-                    nulla. Mauris lobortis, dolor ac ultrices vestibulum, sapien justo dignissim sem, in
-                    vhelloenenatis quam nunc in libero. Sed nec elementum turpis, at fringilla eros. Ut vestibulum,
-                    massa sed iaculis rhoncus, felis tortor laoreet enim, id accumsan nulla velit ut tellus.
-                    Proin blandit ligula quis dictum fringilla. Integer efficitur ac diam vitae placerat.
-                </p>
-            </div>
-        </div>
-    </div>
+		<div class="container-fluid description-box">
+			<div class="row w-75 mx-auto">
+				<div class="col-sm-12" id="description">
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. In interdum
+						dui mollis sem scelerisque, vestibulum tincidunt libero bibendum.
+						Nunc velit turpis, imperdiet sed fringilla in, consecteturnn in
+						sem.nnnnnnnvrvr Cras nunc risus, scelerisque bibendum sollicitudin
+						convallis, scelerisque vel mi. Cras eget nulla vitae purus rutrum
+						iaculis. Cras convallis posuere risus, quis sagittis orci. Mauris eu
+						sollicitudin ligula. Vivamus cursus, metus ac consequat bibendum,
+						justo massa aliquam ex, sed varius velit urna non tellus. Curabitur
+						dapibus eros in auctor mollis. Aenean consequat vejnnjjjnenatis
+						metus eget tempor. Sed eu justo vel tellus feugiat varius sit amet
+						eget nulla. Mauris lobortis, dolor ac ultrices vestibulum, sapien
+						justo dignissim sem, in vhelloenenatis quam nunc in libero. Sed nec
+						elementum turpis, at fringilla eros. Ut vestibulum, massa sed
+						iaculis rhoncus, felis tortor laoreet enim, id accumsan nulla velit
+						ut tellus. Proin blandit ligula quis dictum fringilla. Integer
+						efficitur ac diam vitae placerat.
+					</p>
+				</div>
+			</div>
+		</div>
 
 		<div class="container-fluid related-topics">
 			<div class="row w-75 mx-auto">
@@ -101,13 +106,10 @@
 					<p>related topics</p>
 				</div>
 
-            <div class="col-md-auto" id="description-1">
-                <p>find artifacts</p>
-            </div>
-
-        </div>
-    </div>
-
-</body>
-
+				<div class="col-md-auto" id="description-1">
+					<p>find artifacts</p>
+				</div>
+			</div>
+		</div>
+	</body>
 </html>
