--- a/Project/index.html
+++ b/Project/index.html
@@ -40,6 +40,29 @@
 			src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
 			integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
 			crossorigin="anonymous"></script>
+
+		<script>
+			document.addEventListener("DOMContentLoaded", function() {		
+				onClickArtifactQuery();
+			});
+			
+			var onClickArtifactQuery = function() {
+				//get data from database using $.ajax post request from jquery
+				var data = $.ajax({
+					url: 'http://localhost:3000/queryEvents',
+					type: "POST",
+					contentType: "application/json; charset=utf-8",
+					success: function(data) {
+						//on success render the returned data
+						console.log(data);
+					},
+					error: function(xhr, status, error) {
+						//on failure to fetch the request write to console
+						console.error(status + ': ' + xhr.responseText);
+					}
+				});
+			}
+		</script>
 	</head>
 	<body>
 		<div class="overlay">
