--- a/Project/index.html
+++ b/Project/index.html
@@ -40,16 +40,21 @@
 			src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
 			integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
 			crossorigin="anonymous"></script>
+		
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
 		<script>
-			document.addEventListener("DOMContentLoaded", function() {		
-				onClickArtifactQuery();
+			document.addEventListener("DOMContentLoaded", function() {
+				document.getElementById("searchBox").addEventListener("keyup", function() {
+					onTypeArtifactQuery();
+				});
 			});
 			
-			var onClickArtifactQuery = function() {
+			var onTypeArtifactQuery = function() {
+				console.log(document.getElementById("searchBox").value);
 				//get data from database using $.ajax post request from jquery
 				var data = $.ajax({
-					url: 'http://localhost:3000/queryEvents',
+					url: 'http://localhost:3000/queryArtifacts?name=' + document.getElementById("searchBox").value,
 					type: "POST",
 					contentType: "application/json; charset=utf-8",
 					success: function(data) {
@@ -70,7 +75,7 @@
 
 			<div class="searchbox">
 				<form>
-					<input type="text" name="" placeholder="Search.." />
+					<input type="text" id="searchBox" name="" placeholder="Search.." />
 					<button type="submit">
 						<i class="fa fa-search" arial-hidden="true"></i>
 					</button>
