made questionnaire page connect to a database

--- a/Project/index.html
+++ b/Project/index.html
@@ -24,10 +24,11 @@
 		<link rel="stylesheet" href="CSS/style.css" />
 		<script src="JS/jscript.js"></script>
 		<title>Homepage</title>
-    
-    	<!-- Optional JavaScript -->
+
+		<!-- Optional JavaScript -->
 		<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-		<script	src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+		<script
+			src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
 			integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
 			crossorigin="anonymous"
 		></script>
@@ -39,14 +40,15 @@
 		<script
 			src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
 			integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-			crossorigin="anonymous"></script>
+			crossorigin="anonymous"
+		></script>
 	</head>
 	<body>
 		<div class="overlay">
 			<h1 class="maintitle">Welcome to the Museum</h1>
 
 			<div class="searchbox">
-				<form>
+				<form class="search">
 					<input type="text" name="" placeholder="Search.." />
 					<button type="submit">
 						<i class="fa fa-search" arial-hidden="true"></i>
