--- a/Project/questionnaire.html
+++ b/Project/questionnaire.html
@@ -19,88 +19,110 @@
 	<body>
 		<section id="question-page">
 			<h1 id="questionnaire-title" class="text-center">Questionnaire</h1>
-			<h4 class="question">Question 1: Dropdown</h4>
-			<select
-				class="form-select"
-				id="Select1"
-				aria-label="Default select example"
-			>
-				<option selected>Open this select menu</option>
-				<option value="1">One</option>
-				<option value="2">Two</option>
-				<option value="3">Three</option>
-			</select>
-			<h4 class="question">Question 2: Sample Question</h4>
-			<div class="mb-3">
-				<label for="exampleFormControlTextarea1" class="form-label labelQ"
-					>Answer:</label
+			<form method="post" action="http://localhost:3000/add" id="questionnaire">
+				<h4 class="question">Question 1: What is your name?</h4>
+				<div class="mb-3">
+					<label for="textarea1" class="form-label labelQ">Answer:</label>
+					<textarea
+						class="form-control"
+						id="textarea1"
+						name="name"
+						rows="1"
+					></textarea>
+				</div>
+				<h4 class="question">Question 2: What is your email?</h4>
+				<div class="mb-3">
+					<input type="email" id="email" name="email" />
+				</div>
+				<h4 class="question">Question 3: Dropdown</h4>
+				<select
+					class="form-select"
+					name="dropdown"
+					id="Select1"
+					aria-label="Default select example"
 				>
-				<textarea
-					class="form-control"
-					id="exampleFormControlTextarea1"
-					rows="3"
-				></textarea>
-			</div>
-			<h4 class="question">Question 3: Multiple Choice</h4>
-			<div class="form-check">
-				<input
-					class="form-check-input"
-					type="radio"
-					name="flexRadioDefault"
-					id="flexRadioDefault1"
-					wtx-context="1FC9E9F0-0F75-43A0-9C25-D100F6BE9E07"
-				/>
-				<label class="form-check-label labelQ" for="flexRadioDefault1">
-					Default radio
-				</label>
-			</div>
-			<div class="form-check">
-				<input
-					class="form-check-input"
-					type="radio"
-					name="flexRadioDefault"
-					id="flexRadioDefault2"
-					wtx-context="1CAF244D-B792-4FB0-B525-A6639BD4BD62"
-				/>
-				<label class="form-check-label labelQ" for="flexRadioDefault2">
-					Default radio
-				</label>
-			</div>
-			<div class="form-check">
-				<input
-					class="form-check-input"
-					type="radio"
-					name="flexRadioDefault"
-					id="flexRadioDefault2"
-					wtx-context="1CAF244D-B792-4FB0-B525-A6639BD4BD62"
-				/>
-				<label class="form-check-label labelQ" for="flexRadioDefault2">
-					Default radio
-				</label>
-			</div>
-			<div class="form-check">
-				<input
-					class="form-check-input"
-					type="radio"
-					name="flexRadioDefault"
-					id="flexRadioDefault2"
-					wtx-context="1CAF244D-B792-4FB0-B525-A6639BD4BD62"
-				/>
-				<label class="form-check-label labelQ" for="flexRadioDefault2">
-					Default radio
-				</label>
-			</div>
-			<h4 class="question">Question 4: 1 to 5</h4>
-			<h5 class="question">1 = strongly Agree 5 = strongly disagree</h5>
-			<div class="btn-group" role="group" aria-label="1 to 5">
-				<input class="btn btn-primary" type="button" value="1" />
-				<input class="btn btn-primary" type="button" value="2" />
-				<input class="btn btn-primary" type="button" value="3" />
-				<input class="btn btn-primary" type="button" value="4" />
-				<input class="btn btn-primary" type="button" value="5" />
-			</div>
-			<h4 id="submit-button-text">Submit Button Below</h4>
-			<button type="submit" class="btn btn-primary btn-submit">Submit</button>
+					<option selected>Open this select menu</option>
+					<option value="1">One</option>
+					<option value="2">Two</option>
+					<option value="3">Three</option>
+				</select>
+				<h4 class="question">Question 4: Sample Question</h4>
+				<div class="mb-3">
+					<label for="exampleFormControlTextarea1" class="form-label labelQ"
+						>Answer:</label
+					>
+					<textarea
+						class="form-control"
+						id="exampleFormControlTextarea1"
+						rows="3"
+						name="text"
+					></textarea>
+				</div>
+				<h4 class="question">Question 5: Multiple Choice</h4>
+				<div class="form-check">
+					<input
+						class="form-check-input"
+						type="radio"
+						name="radio"
+						id="flexRadioDefault1"
+						wtx-context="1FC9E9F0-0F75-43A0-9C25-D100F6BE9E07"
+						value="answer1"
+					/>
+					<label class="form-check-label labelQ" for="flexRadioDefault1">
+						Default radio
+					</label>
+				</div>
+				<div class="form-check">
+					<input
+						class="form-check-input"
+						type="radio"
+						name="radio"
+						id="flexRadioDefault2"
+						wtx-context="1CAF244D-B792-4FB0-B525-A6639BD4BD62"
+						value="answer2"
+					/>
+					<label class="form-check-label labelQ" for="flexRadioDefault2">
+						Default radio
+					</label>
+				</div>
+				<div class="form-check">
+					<input
+						class="form-check-input"
+						type="radio"
+						name="radio"
+						id="flexRadioDefault2"
+						wtx-context="1CAF244D-B792-4FB0-B525-A6639BD4BD62"
+						value="answer3"
+					/>
+					<label class="form-check-label labelQ" for="flexRadioDefault2">
+						Default radio
+					</label>
+				</div>
+				<div class="form-check">
+					<input
+						class="form-check-input"
+						type="radio"
+						name="radio"
+						id="flexRadioDefault2"
+						wtx-context="1CAF244D-B792-4FB0-B525-A6639BD4BD62"
+						value="answer4"
+					/>
+					<label class="form-check-label labelQ" for="flexRadioDefault2">
+						Default radio
+					</label>
+				</div>
+				<h4 class="question">Question 6: 1 to 5</h4>
+				<h5 class="question">1 = strongly Agree 5 = strongly disagree</h5>
+				<div class="btn-group" role="group" aria-label="1 to 5">
+					<input class="btn btn-primary" type="button" name="butto" value="1" />
+					<input class="btn btn-primary" type="button" name="butto" value="2" />
+					<input class="btn btn-primary" type="button" name="butto" value="3" />
+					<input class="btn btn-primary" type="button" name="butto" value="4" />
+					<input class="btn btn-primary" type="button" name="butto" value="5" />
+				</div>
+				<h4 id="submit-button-text">Submit Button Below</h4>
+				<button type="submit" class="btn btn-primary btn-submit">Submit</button>
+			</form>
 		</section>
 	</body>
 </html>
