--- a/Project/quiz.html
+++ b/Project/quiz.html
@@ -15,6 +15,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="CSS/style.css" rel="stylesheet" type="text/css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     
     <script>
         document.addEventListener("DOMContentLoaded", function () {
@@ -49,7 +50,26 @@
                 document.getElementById("option2").attributeStyleMap.clear();
                 document.getElementById("option3").attributeStyleMap.clear();
             });
+
+            getQuestionAnswers();
         });
+
+        var getQuestionAnswers = function() {
+            //get data from database using $.ajax post request from jquery
+            var data = $.ajax({
+                url: 'http://localhost:3000/queryQuiz',
+                type: "POST",
+                contentType: "application/json; charset=utf-8",
+                success: function(data) {
+                    //on success render the returned data
+                    console.log(data);
+                },
+                error: function(xhr, status, error) {
+                    //on failure to fetch the request write to console
+                    console.error(status + ': ' + xhr.responseText);
+                }
+            });
+        }
     </script>
 
     <style>
