--- a/Project/eventdetails.html
+++ b/Project/eventdetails.html
@@ -4,6 +4,9 @@
     <link href="CSS/style.css" rel="stylesheet" />
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	  <script src="JS/jscript.js"></script>
+    <script>
+      
+    </script>
     <style>
       .page-header
       {
