--- a/Project/timeline.html
+++ b/Project/timeline.html
@@ -2,11 +2,10 @@
 <html lang="en">
   <head>
 		<link href="CSS/style.css" rel="stylesheet" />
-    <link href="CSS/magicscroll.css" rel="stylesheet" />
+    <!-- <link href="CSS/magicscroll.css" rel="stylesheet" /> -->
 		<script src="JS/jscript.js"></script>
-    <script src="JS/magicscroll.js"></script>
+    <!-- <script src="JS/magicscroll.js"></script> -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="JS/coverflow.js"></script>
 
