--- a/Project/test.html
+++ b/Project/test.html
@@ -13,11 +13,20 @@
 <div class="area">
   <div class="slider">
     <div class="slides">
-      <div class="slide"><div class="slide-inner">
-       <a href="#" data-slide="1"><img alt="a black and white kitten playing with a flower" src="https://assets.codepen.io/588944/cat-gb04944831_640.jpg" /></a>
-        <h2 class="slide-title">Slide title</h2>
-        <p class="slide-description">this is the information about the slide</p>
-        </div></div>
+
+      
+      <div class="slide">
+        <div class="slide-inner">
+          <a href="#" data-slide="1"><img alt="a black and white kitten playing with a flower" src="https://assets.codepen.io/588944/cat-gb04944831_640.jpg" /></a>
+          <h2 class="slide-title">Slide title</h2>
+          <p class="slide-description">this is the information about the slide</p>
+        </div>
+      </div>
+
+
+
+
+
       <div class="slide"><div class="slide-inner">
       <a href="#" data-slide="2"><img alt="two white kittens, one is tine and the other one is slightly larger" src="https://assets.codepen.io/588944/cat-gd4350781a_640.jpg" /></a>
         <h2 class="slide-title">Slide title 2</h2>
