--- a/Project/questionnaire.html
+++ b/Project/questionnaire.html
@@ -1,8 +1,41 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link href="CSS/style.css" rel="stylesheet" />
-		<style></style>
+		<style>
+			/* Questionnaire CSS */
+			#submit-button-text {
+				margin: 10px 10px 10px 10px;
+				font-size: 20px;
+				color: #ffffff;
+			}
+			.question {
+				margin: 10px 10px 10px 10px;
+				padding-top: 10px;
+				color: #ffffff;
+			}
+			#questionnaire-title {
+				font-family: "Inter";
+				font-style: normal;
+				font-weight: 700;
+				font-size: 65px;
+				line-height: 79px;
+				text-align: center;
+
+				color: #ffffff;
+			}
+			.labelQ {
+				color: #ffffff;
+			}
+			#exampleFormControlTextarea1 {
+				width: 40%;
+			}
+			#Select1 {
+				width: 40%;
+			}
+			#question-page {
+				margin-left: 50px;
+			}
+		</style>
 		<script src="JS/jscript.js"></script>
 		<link
 			rel="stylesheet"
