--- a/Project/timeline.html
+++ b/Project/timeline.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-		
+		<meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css'>
     <link rel="stylesheet" href="CSS/scroll.css">
 		<link href="CSS/style.css" rel="stylesheet" />
