started with login and register pages

--- a/Project/login.html
+++ b/Project/login.html
@@ -39,5 +39,11 @@
 			<input type="password" />
 			<button type="submit">Submit</button>
 		</form>
+		<button id="register">Register</button>
+		<script type="text/javascript">
+			document.getElementById("register").onclick = function () {
+				location.href = "../Project/register.html";
+			};
+		</script>
 	</body>
 </html>
