--- a/Project/index.html
+++ b/Project/index.html
@@ -1,12 +1,5 @@
-<html lang="en">
+<!DOCTYPE html>
 	<head>
-		<!-- Required meta tags -->
-		<meta charset="utf-8" />
-		<meta
-			name="viewport"
-			content="width=device-width, initial-scale=1, shrink-to-fit=no"
-		/>
-
 		<!-- Bootstrap CSS -->
 		<link
 			rel="stylesheet"
@@ -69,10 +62,6 @@
 				});
 			};
 		</script>
-
-		<style>
-			
-		</style>
 	</head>
 	<body>
 		<div class="overlay">
